sort.pancake.BasicPancake.scala.error
Compilation error:
BasicPancake:3: error: not enough arguments for method getPancakeRadius: (x$1: Int)Int.
Unspecified value parameter x$1.
  var lastSorted = getPancakeRadius();
                                   ^